Add hover to open formula editor

--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": [],
+  "activationEvents": [
+    "onLanguage:markdown"
+  ],
   "main": "./dist/extension.js",
   "contributes": {
     "commands": [
       {
-        "command": "formula-editor-vscode.helloWorld",
-        "title": "Hello World"
+        "command": "formula-editor-vscode.editor",
+        "title": "Open math editor"
       }
     ]
   },
