--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
       {
         "command": "formula-editor-vscode.openEditor",
         "title": "Open math editor"
+      },
+      {
+        "command": "formula-editor-vscode.openLinkedEditor",
+        "title": "Open math editor(Linked)"
       }
     ],
     "menus": {
@@ -25,6 +29,11 @@
         {
           "when": "editorFocus",
           "command": "formula-editor-vscode.openEditor",
+          "group": "myGroup@1"
+        },
+        {
+          "when": "editorFocus",
+          "command": "formula-editor-vscode.openLinkedEditor",
           "group": "myGroup@1"
         }
       ]
