--- a/package.json
+++ b/package.json
@@ -59,7 +59,6 @@
   },
   "dependencies": {
     "mathlive": "^0.101.0",
-    "vsce": "^2.15.0",
-    "vscode-textmate-languageservice": "^3.0.1"
+    "vsce": "^2.15.0"
   }
 }
