--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "formula-editor-vscode",
   "displayName": "Formula Editor",
   "description": "WYSIWYG formula editor to get latex format string",
+  "icon": "images/icon-128x128.png",
   "publisher": "kurusugawa-computer",
   "version": "0.0.1",
   "engines": {
